<resources>
    <string name="app_name">PiscicultureManager</string>
    <string name="default_username">默认用户</string>
    <string name="default_time">默认时间</string>
    <string name="default_test">默认测试文本</string>
    <string name="welcome">欢迎登录</string>
    <string name="signingup">请注册</string>
    <string name="submit">登录</string>
    <string name="signup">注册</string>
    <string name="username">用户名</string>
    <string name="username_english">username</string>
    <string name="user_saved">saved</string>
    <string name="password">密码</string>
    <string name="enter">确认</string>
    <string name="commit">提交</string>
    <string name="cancel">取消</string>
    <string name="modify">修改</string>
    <string name="login_missed">缺少用户名或密码</string>
    <string name="login_failed">用户名或密码错误</string>
    <string name="login_none">用户不存在</string>
    <string name="alter_password">修改密码</string>
    <string name="new_password">新密码</string>
    <string name="register_duplicated">已存在该用户，直接登录</string>
    <string name="register_succeed">新建用户成功</string>
    <string name="log_in_succeed">登录成功</string>
    <string name="register_nopasswd">密码不能为空</string>
    <string name="request_failed">请求失败</string>
    <string name="request_succeed">请求成功</string>
    <string name="data_refreshed">数据已刷新</string>
    <string name="data_no_refreshed">暂无更新</string>
    <string name="data_updated">修改成功</string>
    <string name="one_day_data">24小时内数据</string>
    <string name="quality_warnning">水质预警</string>
    <string name="some_data_over_standard">多个参数超标</string>
    <string name="current_value">当前值为：</string>
    <string name="param_overstandard">参数超标，此时量为：</string>
    <string name="param_time">时间</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
